[package]
name = "laundry-machine-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe      = { version = "0.27.2", features = ["persistence"] }
egui        = "0.27.2"
egui_extras = { version = "0.27.2", features = ["http", "image"] }
image       = { version = "0.24.9", default-features = false, features = ["jpeg", "png"] }
rumqttc     = "0.24.0"
serde       = { version = "1.0.202", features = ["derive"] }
serde_json  = "1.0.117"
